# adaptive-math-step-analyser

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1127baad37c9_init_schema.py  1344f683c1b4_add_student_profile.py
app/: main.py
app/api/routers/: __init__.py  admin.py  attempts.py  practice.py  problems.py  profile.py
app/core/: config.py  db.py
app/math_core/: equivalence.py  normalizer.py  parser.py  sympy_parser.py  transitions.py
app/models/: __init__.py  analysis_result.py  attempt.py  base.py  problem.py  step.py  student_profile.py
app/schemas/: attempt.py  practice.py  problem.py  profile.py  step.py
app/services/: analysis_service.py  constraint_service.py  diagnosis_service.py  feedback_service.py  next_problem_service.py  problem_seed_service.py  profile_admin_service.py  recommendation_service.py  student_model_service.py
tests/: test_admin_api.py  test_attempts_api.py  test_constraint_service.py  test_diagnosis_service.py  test_equivalence.py  test_generate_problem_api.py  test_next_problem_api.py  test_parser.py  test_problems_api.py  test_profile_api.py  test_profile_custom_key_api.py  test_seed_api.py  test_steps_api.py  test_sympy_parser.py
